feat: add video player

--- a/src/index.html
+++ b/src/index.html
@@ -37,11 +37,11 @@
             <div class="instagram hero__instagram"><a href="#" class="instagram__link">INSTAGRAM</a></div>
             <div class="container">
                 <div class="hero__content">
-                    <h1 class="title hero__title animate__animated animate__fadeIn wow">
+                    <h1 class="title hero__title animate__animated animate__fadeIn">
                         <span class="title__text">турецкий ремонт в&nbsp;</span><span class="title__text_primary">Ростове-на-дону</span>
                     </h1>
-                    <p class="hero__text animate__animated animate__fadeIn wow">Получите готовый ремонт под ключ в срок с экономией рабочего времени до 45 дней и 20% от стоимости материалов за счет организации работы</p>
-                    <div class="buttons hero__buttons animate__animated animate__fadeInLeft wow">
+                    <p class="hero__text animate__animated animate__fadeIn">Получите готовый ремонт под ключ в срок с экономией рабочего времени до 45 дней и 20% от стоимости материалов за счет организации работы</p>
+                    <div class="buttons hero__buttons animate__animated animate__fadeInLeft">
                         <button class="button hero__button button_primary" data-toggle="modal">Рассчитать стоимость</button>
                         <button class="button hero__button button_transparent">Отправить заявку</button>
                     </div>
@@ -170,6 +170,7 @@
                 </div>
                 <!-- /.section-title -->
                 <div class="video control__video animate__animated animate__fadeIn wow">
+                    <div class="video__player" id="video"></div>
                     <button class="video__play"></button>
                 </div>
                 <!-- /.control__video -->
@@ -750,6 +751,7 @@
         </div>
     </div>
     <!-- /.modal-info -->
+    <script src="https://www.youtube.com/iframe_api"></script>
     <script src="./js/main.min.js"></script>
 </body>
 </html>
