feat: add section leave-contacts

--- a/src/index.html
+++ b/src/index.html
@@ -277,7 +277,52 @@
         <!-- /.section.repair-types -->
         <section class="leave-contact">
             <div class="container">
-
+                <div class="row center">
+                    <div class="leave-contact__information information">
+                        <ol class="information__list">
+                            <li class="information__item"><div class="information__text">Наш специалист приедет для замеров в день контакта или назначит удобную для вас дату</div></li>
+                            <li class="information__item"><div class="information__text">Бесплатный замер</div></li>
+                            <li class="information__item"><div class="information__text">Бесплатная консультация</div></li>
+                            <li class="information__item"><div class="information__text">Получите смету расходов и сроки вашего будущего ремонта</div></li>
+                        </ol>
+                        <!-- /.information__list -->
+                    </div>
+                    <!-- /.leave-contact__information information -->
+                    <div class="form-wrap leave-contact__form-wrap">
+                        <h3 class="leave-contact__title">Оставьте заявку на бесплатный выезд замерщика</h3>
+                        <form class="leave-contact__form">
+                            <div class="leave-contact__input-group">
+                                <label for="leave-contact-name" class="label leave-contact__label label_light">Имя</label>
+                                <input id="leave-contact-name" type="text" name="userName" class="input leave-contact__input input_dark" placeholder="Как вас зовут:">
+                            </div>
+                            <!-- /.leave-contact__input-group -->
+                            <div class="leave-contact__input-group">
+                                <label for="leave-contact-phone" class="label leave-contact__label label_light">Телефон</label>
+                                <input id="leave-contact-phone" type="tel" name="userPhone" class="input leave-contact__input input_dark" placeholder="Ваш номер телефона:">
+                            </div>
+                            <!-- /.leave-contact__input-group -->
+                            <div class="leave-contact__input-group">
+                                <label for="leave-contact-email" class="label leave-contact__label label_light">Email</label>
+                                <input id="leave-contact-email" type="email" name="userEmail" class="input leave-contact__input input_dark" placeholder="Ваш email">
+                            </div>
+                            <!-- /.leave-contact__input-group -->
+                            <div class="policy leave-contact__policy">
+                                <input id="leave-contact-agree" type="checkbox" name="userPolicy" class="checkbox policy__checkbox" checked>
+                                <label for="leave-contact-agree" class="policy__label">Я соглашаюсь с обработкой данных</label>
+                            </div>
+                            <button class="button leave-contact__button button_primary">Вызвать замерщика</button>
+                        </form>
+                        <!-- /.leave-contact__form -->
+                    </div>
+                    <!-- /.form-wrap leave-contact__form-wrap -->
+                </div>
+                <!-- /.row -->
+                <div class="leave-contact__saving saving">
+                    <div class="saving__icon"><img src="./img/pig-icon.svg" alt="pig"></div>
+                    <p class="saving__text">Это поможет сэкономить 10 - 20% от стоимости материалов
+                    </p>
+                </div>
+                <!-- /.leave-contact__saving saving -->
             </div>
             <!-- /.container -->
         </section>
