--- a/src/index.html
+++ b/src/index.html
@@ -283,13 +283,13 @@
                             <li class="information__item"><div class="information__text">Наш специалист приедет для замеров в день контакта или назначит удобную для вас дату</div></li>
                             <li class="information__item"><div class="information__text">Бесплатный замер</div></li>
                             <li class="information__item"><div class="information__text">Бесплатная консультация</div></li>
-                            <li class="information__item"><div class="information__text">Получите смету расходов и сроки вашего будущего ремонта</div></li>
+                            <li class="information__item"><div class="information__text">Получите смету расходов и сроки<br>вашего будущего ремонта</div></li>
                         </ol>
                         <!-- /.information__list -->
                     </div>
                     <!-- /.leave-contact__information information -->
                     <div class="form-wrap leave-contact__form-wrap">
-                        <h3 class="leave-contact__title">Оставьте заявку на бесплатный выезд замерщика</h3>
+                        <h3 class="leave-contact__title">Оставьте заявку на бесплатный<br>выезд замерщика</h3>
                         <form class="leave-contact__form">
                             <div class="leave-contact__input-group">
                                 <label for="leave-contact-name" class="label leave-contact__label label_light">Имя</label>
