feat: add animate in section leave contacts

--- a/src/index.html
+++ b/src/index.html
@@ -280,10 +280,10 @@
                 <div class="row center">
                     <div class="leave-contact__information information">
                         <ol class="information__list">
-                            <li class="information__item"><div class="information__text">Наш специалист приедет для замеров в день контакта или назначит удобную для вас дату</div></li>
-                            <li class="information__item"><div class="information__text">Бесплатный замер</div></li>
-                            <li class="information__item"><div class="information__text">Бесплатная консультация</div></li>
-                            <li class="information__item"><div class="information__text">Получите смету расходов и сроки<br>вашего будущего ремонта</div></li>
+                            <li class="information__item wow animate__animated animate__fadeIn"><div class="information__text">Наш специалист приедет для замеров в день контакта или назначит удобную для вас дату</div></li>
+                            <li class="information__item wow animate__animated animate__fadeIn animate__delay-1s"><div class="information__text">Бесплатный замер</div></li>
+                            <li class="information__item wow animate__animated animate__fadeIn animate__delay-2s"><div class="information__text">Бесплатная консультация</div></li>
+                            <li class="information__item wow animate__animated animate__fadeIn animate__delay-3s"><div class="information__text">Получите смету расходов и сроки<br>вашего будущего ремонта</div></li>
                         </ol>
                         <!-- /.information__list -->
                     </div>
