feat: pixel perfect

--- a/src/index.html
+++ b/src/index.html
@@ -56,7 +56,7 @@
                 <div class="row projects__content">
                     <div class="col-50">
                         <div class="section-title section-title_left projects__section-title">
-                            <h2 class="section-title__heading section-title__heading_primary animate__animated animate__fadeInDown wow">Завершенные<span class="section-title__word">проекты</span></h2>
+                            <h2 class="section-title__heading projects__heading section-title__heading_primary animate__animated animate__fadeInDown wow">Завершенные<span class="section-title__word">проекты</span></h2>
                             <p class="section-title__text animate__animated animate__fadeInDown wow">На сайте представлена ​​лишь небольшая часть работ, выполняемых нашей компанией. За 14 лет работы на строительном рынке мы осчастливили более 1000 семей</p>
                         </div>
                         <!-- /.section-title -->
