feat: pixel perfect

--- a/src/index.html
+++ b/src/index.html
@@ -197,7 +197,7 @@
             </div>
         </section>
         <!-- /.section.control -->
-        <section class="section repair-types">
+        <section class="section repair-types section_white">
             <div class="container">
                 <div class="section-title repair-types__section-title animate__animated animate__fadeInDown wow">
                     <h2 class="section-title__heading">Виды ремонта</h2>
@@ -275,7 +275,7 @@
             <!-- /.container -->
         </section>
         <!-- /.section.repair-types -->
-        <section class="leave-contact">
+        <section class="leave-contact section_white">
             <div class="container">
                 <div class="row center">
                     <div class="leave-contact__information information">
@@ -417,8 +417,8 @@
                 <div class="row">
                     <div class="working-methods__text">
                         <div class="section-title section-title_left projects__section-title">
-                            <p class="section-title__subtitle animate__animated animate__fadeIn wow">как мы работаем</p>
-                            <h2 class="section-title__heading section-title__heading_primary animate__animated animate__fadeInDown wow">6 шагов<span class="section-title__word">до цели</span></h2>
+                            <p class="section-title__subtitle working-methods__subtitle animate__animated animate__fadeIn wow">как мы работаем</p>
+                            <h2 class="section-title__heading working-methods__heading section-title__heading_primary animate__animated animate__fadeInDown wow">6 шагов<span class="section-title__word">до цели</span></h2>
                         </div>
                         <!-- /.section-title -->
                         <div class="swiper working-methods__swiper animate__animated animate__fadeInLeft wow">
@@ -426,43 +426,55 @@
                                 <div class="swiper-slide">
                                     <div class="swiper-slide__progress-number"></div>
                                     <h3 class="swiper-slide__heading swiper-slide__heading_sm">Выезд на замеры помещения</h3>
-                                    <p class="swiper-slide__description">После вашего звонка мы идем к вам, чтобы проконсультироваться и измерить помещения вашей квартиры. Во время нашей встречи вы можете задать абсолютно любые вопросы, касаемо ремонта.<br><br> 
-                                        Оценщик приходит, чтобы измерить комнату. Он проконсультирует вас по вопросам техники ремонта, дизайна квартиры, сроков ремонта квартиры в целом и отдельных ее этапов.</p>
+                                    <div class="swiper-slide__description">
+                                        <p class="swiper-slide__paragraph">После вашего звонка мы идем к вам, чтобы проконсультироваться и измерить помещения вашей квартиры. Во время нашей встречи вы можете задать абсолютно любые вопросы, касаемо ремонта.</p>
+                                        <p class="swiper-slide__paragraph">Оценщик приходит, чтобы измерить комнату. Он проконсультирует вас по вопросам техники ремонта, дизайна квартиры, сроков ремонта квартиры в целом и отдельных ее этапов.</p>
+                                    </div>
                                 </div>
                                 <!-- /.swiper-slide -->
                                 <div class="swiper-slide">
                                     <div class="swiper-slide__progress-number"></div>
                                     <h3 class="swiper-slide__heading swiper-slide__heading_sm">Составление сметы</h3>
-                                    <p class="swiper-slide__description">После вашего звонка мы идем к вам, чтобы проконсультироваться и измерить помещения вашей квартиры. Во время нашей встречи вы можете задать абсолютно любые вопросы, касаемо ремонта. 
-                                        Оценщик приходит, чтобы измерить комнату. Он проконсультирует вас по вопросам техники ремонта, дизайна квартиры, сроков ремонта квартиры в целом и отдельных ее этапов.</p>
+                                    <div class="swiper-slide__description">
+                                        <p class="swiper-slide__paragraph">После вашего звонка мы идем к вам, чтобы проконсультироваться и измерить помещения вашей квартиры. Во время нашей встречи вы можете задать абсолютно любые вопросы, касаемо ремонта.</p>
+                                        <p class="swiper-slide__paragraph">Оценщик приходит, чтобы измерить комнату. Он проконсультирует вас по вопросам техники ремонта, дизайна квартиры, сроков ремонта квартиры в целом и отдельных ее этапов.</p>
+                                    </div>
                                 </div>
                                 <!-- /.swiper-slide -->
                                 <div class="swiper-slide">
                                     <div class="swiper-slide__progress-number"></div>
                                     <h3 class="swiper-slide__heading swiper-slide__heading_sm">Разработка  дизайн проекта</h3>
-                                    <p class="swiper-slide__description">После вашего звонка мы идем к вам, чтобы проконсультироваться и измерить помещения вашей квартиры. Во время нашей встречи вы можете задать абсолютно любые вопросы, касаемо ремонта. 
-                                        Оценщик приходит, чтобы измерить комнату. Он проконсультирует вас по вопросам техники ремонта, дизайна квартиры, сроков ремонта квартиры в целом и отдельных ее этапов.</p>
+                                    <div class="swiper-slide__description">
+                                        <p class="swiper-slide__paragraph">После вашего звонка мы идем к вам, чтобы проконсультироваться и измерить помещения вашей квартиры. Во время нашей встречи вы можете задать абсолютно любые вопросы, касаемо ремонта.</p>
+                                        <p class="swiper-slide__paragraph">Оценщик приходит, чтобы измерить комнату. Он проконсультирует вас по вопросам техники ремонта, дизайна квартиры, сроков ремонта квартиры в целом и отдельных ее этапов.</p>
+                                    </div>
                                 </div>
                                 <!-- /.swiper-slide -->
                                 <div class="swiper-slide">
                                     <div class="swiper-slide__progress-number"></div>
                                     <h3 class="swiper-slide__heading swiper-slide__heading_sm">Закупка расходных материалов</h3>
-                                    <p class="swiper-slide__description">После вашего звонка мы идем к вам, чтобы проконсультироваться и измерить помещения вашей квартиры. Во время нашей встречи вы можете задать абсолютно любые вопросы, касаемо ремонта. 
-                                        Оценщик приходит, чтобы измерить комнату. Он проконсультирует вас по вопросам техники ремонта, дизайна квартиры, сроков ремонта квартиры в целом и отдельных ее этапов.</p>
+                                    <div class="swiper-slide__description">
+                                        <p class="swiper-slide__paragraph">После вашего звонка мы идем к вам, чтобы проконсультироваться и измерить помещения вашей квартиры. Во время нашей встречи вы можете задать абсолютно любые вопросы, касаемо ремонта.</p>
+                                        <p class="swiper-slide__paragraph">Оценщик приходит, чтобы измерить комнату. Он проконсультирует вас по вопросам техники ремонта, дизайна квартиры, сроков ремонта квартиры в целом и отдельных ее этапов.</p>
+                                    </div>
                                 </div>
                                 <!-- /.swiper-slide -->
                                 <div class="swiper-slide">
                                     <div class="swiper-slide__progress-number"></div>
                                     <h3 class="swiper-slide__heading swiper-slide__heading_sm">Ремонтно-отделочные работы</h3>
-                                    <p class="swiper-slide__description">После вашего звонка мы идем к вам, чтобы проконсультироваться и измерить помещения вашей квартиры. Во время нашей встречи вы можете задать абсолютно любые вопросы, касаемо ремонта. 
-                                        Оценщик приходит, чтобы измерить комнату. Он проконсультирует вас по вопросам техники ремонта, дизайна квартиры, сроков ремонта квартиры в целом и отдельных ее этапов.</p>
+                                    <div class="swiper-slide__description">
+                                        <p class="swiper-slide__paragraph">После вашего звонка мы идем к вам, чтобы проконсультироваться и измерить помещения вашей квартиры. Во время нашей встречи вы можете задать абсолютно любые вопросы, касаемо ремонта.</p>
+                                        <p class="swiper-slide__paragraph">Оценщик приходит, чтобы измерить комнату. Он проконсультирует вас по вопросам техники ремонта, дизайна квартиры, сроков ремонта квартиры в целом и отдельных ее этапов.</p>
+                                    </div>
                                 </div>
                                 <!-- /.swiper-slide -->
                                 <div class="swiper-slide">
                                     <div class="swiper-slide__progress-number"></div>
                                     <h3 class="swiper-slide__heading swiper-slide__heading_sm">Приемка-сдача работ</h3>
-                                    <p class="swiper-slide__description">После вашего звонка мы идем к вам, чтобы проконсультироваться и измерить помещения вашей квартиры. Во время нашей встречи вы можете задать абсолютно любые вопросы, касаемо ремонта. 
-                                        Оценщик приходит, чтобы измерить комнату. Он проконсультирует вас по вопросам техники ремонта, дизайна квартиры, сроков ремонта квартиры в целом и отдельных ее этапов.</p>
+                                    <div class="swiper-slide__description">
+                                        <p class="swiper-slide__paragraph">После вашего звонка мы идем к вам, чтобы проконсультироваться и измерить помещения вашей квартиры. Во время нашей встречи вы можете задать абсолютно любые вопросы, касаемо ремонта.</p>
+                                        <p class="swiper-slide__paragraph">Оценщик приходит, чтобы измерить комнату. Он проконсультирует вас по вопросам техники ремонта, дизайна квартиры, сроков ремонта квартиры в целом и отдельных ее этапов.</p>
+                                    </div>
                                 </div>
                                 <!-- /.swiper-slide -->
                             </div>
@@ -623,7 +635,7 @@
             <!-- /.container -->
         </section>
         <!-- /.command -->
-        <section class="section clients">
+        <section class="section clients section_white">
             <div class="container">
                 <div class="section-title">
                     <h2 class="section-title__heading animate__animated animate__fadeInDown wow">Наши клиенты</h2>
