feat: add repair-styles section

--- a/src/index.html
+++ b/src/index.html
@@ -329,7 +329,105 @@
         <!-- /.leave-contact -->
         <section class="repair-styles">
             <div class="container">
-
+                <div class="swiper repair-styles__swiper">
+                    <div class="row">
+                        <div class="repair-styles__text">
+                            <h2 class="repair-styles__heading animate__animated animate__fadeInDown wow">Мы реализуем ваши самые смелые фантазии</h2>
+                            <div class="swiper-navigation row animate__animated animate__fadeIn wow">
+                                <ul class="repair-styles__items-navigation">
+                                    <li class="repair-styles_item-navigation">Американская классика</li>
+                                    <li class="repair-styles_item-navigation">Имперский стиль</li>
+                                    <li class="repair-styles_item-navigation">Классика</li>
+                                    <li class="repair-styles_item-navigation">Лофт</li>
+                                    <li class="repair-styles_item-navigation">Минимализм</li>
+                                    <li class="repair-styles_item-navigation">Прованс</li>
+                                    <li class="repair-styles_item-navigation">Романтизм</li>
+                                    <li class="repair-styles_item-navigation">Скандинавский стиль</li>
+                                    <li class="repair-styles_item-navigation">Средиземноморский стиль</li>
+                                    <li class="repair-styles_item-navigation">Хайтек</li>
+                                    <li class="repair-styles_item-navigation">Эклектизм</li>
+                                </ul>
+                                <!-- /.repair-styles__items -->
+                            </div>
+                            <!-- /.swiper-navigation row animate__animated animate__fadeIn wow -->
+                        </div>
+                        <!-- /.repair-styles__text -->
+                        <div class="repair-styles__images">
+                            <div class="swiper-wrapper">
+                                <div class="swiper-slide">
+                                    <div class="repair-styles__image-wrapper"><img src="./img/repair-styles-1.jpg" alt="styles" class="repair-styles__image"></div>
+                                    <div class="repair-styles__image-wrapper"><img src="./img/repair-styles-2.jpg" alt="styles" class="repair-styles__image"></div>
+                                    <div class="repair-styles__image-wrapper"><img src="./img/repair-styles-3.jpg" alt="styles" class="repair-styles__image"></div>
+                                    <div class="repair-styles__image-wrapper"><img src="./img/repair-styles-4.jpg" alt="styles" class="repair-styles__image"></div>
+                                </div>
+                                <div class="swiper-slide">
+                                    <div class="repair-styles__image-wrapper"><img src="./img/repair-styles-1.jpg" alt="styles" class="repair-styles__image"></div>
+                                    <div class="repair-styles__image-wrapper"><img src="./img/repair-styles-2.jpg" alt="styles" class="repair-styles__image"></div>
+                                    <div class="repair-styles__image-wrapper"><img src="./img/repair-styles-3.jpg" alt="styles" class="repair-styles__image"></div>
+                                    <div class="repair-styles__image-wrapper"><img src="./img/repair-styles-4.jpg" alt="styles" class="repair-styles__image"></div>
+                                </div>
+                                <div class="swiper-slide">
+                                    <div class="repair-styles__image-wrapper"><img src="./img/repair-styles-1.jpg" alt="styles" class="repair-styles__image"></div>
+                                    <div class="repair-styles__image-wrapper"><img src="./img/repair-styles-2.jpg" alt="styles" class="repair-styles__image"></div>
+                                    <div class="repair-styles__image-wrapper"><img src="./img/repair-styles-3.jpg" alt="styles" class="repair-styles__image"></div>
+                                    <div class="repair-styles__image-wrapper"><img src="./img/repair-styles-4.jpg" alt="styles" class="repair-styles__image"></div>
+                                </div>
+                                <div class="swiper-slide">
+                                    <div class="repair-styles__image-wrapper"><img src="./img/repair-styles-1.jpg" alt="styles" class="repair-styles__image"></div>
+                                    <div class="repair-styles__image-wrapper"><img src="./img/repair-styles-2.jpg" alt="styles" class="repair-styles__image"></div>
+                                    <div class="repair-styles__image-wrapper"><img src="./img/repair-styles-3.jpg" alt="styles" class="repair-styles__image"></div>
+                                    <div class="repair-styles__image-wrapper"><img src="./img/repair-styles-4.jpg" alt="styles" class="repair-styles__image"></div>
+                                </div>
+                                <div class="swiper-slide">
+                                    <div class="repair-styles__image-wrapper"><img src="./img/repair-styles-1.jpg" alt="styles" class="repair-styles__image"></div>
+                                    <div class="repair-styles__image-wrapper"><img src="./img/repair-styles-2.jpg" alt="styles" class="repair-styles__image"></div>
+                                    <div class="repair-styles__image-wrapper"><img src="./img/repair-styles-3.jpg" alt="styles" class="repair-styles__image"></div>
+                                    <div class="repair-styles__image-wrapper"><img src="./img/repair-styles-4.jpg" alt="styles" class="repair-styles__image"></div>
+                                </div>
+                                <div class="swiper-slide">
+                                    <div class="repair-styles__image-wrapper"><img src="./img/repair-styles-1.jpg" alt="styles" class="repair-styles__image"></div>
+                                    <div class="repair-styles__image-wrapper"><img src="./img/repair-styles-2.jpg" alt="styles" class="repair-styles__image"></div>
+                                    <div class="repair-styles__image-wrapper"><img src="./img/repair-styles-3.jpg" alt="styles" class="repair-styles__image"></div>
+                                    <div class="repair-styles__image-wrapper"><img src="./img/repair-styles-4.jpg" alt="styles" class="repair-styles__image"></div>
+                                </div>
+                                <div class="swiper-slide">
+                                    <div class="repair-styles__image-wrapper"><img src="./img/repair-styles-1.jpg" alt="styles" class="repair-styles__image"></div>
+                                    <div class="repair-styles__image-wrapper"><img src="./img/repair-styles-2.jpg" alt="styles" class="repair-styles__image"></div>
+                                    <div class="repair-styles__image-wrapper"><img src="./img/repair-styles-3.jpg" alt="styles" class="repair-styles__image"></div>
+                                    <div class="repair-styles__image-wrapper"><img src="./img/repair-styles-4.jpg" alt="styles" class="repair-styles__image"></div>
+                                </div>
+                                <div class="swiper-slide">
+                                    <div class="repair-styles__image-wrapper"><img src="./img/repair-styles-1.jpg" alt="styles" class="repair-styles__image"></div>
+                                    <div class="repair-styles__image-wrapper"><img src="./img/repair-styles-2.jpg" alt="styles" class="repair-styles__image"></div>
+                                    <div class="repair-styles__image-wrapper"><img src="./img/repair-styles-3.jpg" alt="styles" class="repair-styles__image"></div>
+                                    <div class="repair-styles__image-wrapper"><img src="./img/repair-styles-4.jpg" alt="styles" class="repair-styles__image"></div>
+                                </div>
+                                <div class="swiper-slide">
+                                    <div class="repair-styles__image-wrapper"><img src="./img/repair-styles-1.jpg" alt="styles" class="repair-styles__image"></div>
+                                    <div class="repair-styles__image-wrapper"><img src="./img/repair-styles-2.jpg" alt="styles" class="repair-styles__image"></div>
+                                    <div class="repair-styles__image-wrapper"><img src="./img/repair-styles-3.jpg" alt="styles" class="repair-styles__image"></div>
+                                    <div class="repair-styles__image-wrapper"><img src="./img/repair-styles-4.jpg" alt="styles" class="repair-styles__image"></div>
+                                </div>
+                                <div class="swiper-slide">
+                                    <div class="repair-styles__image-wrapper"><img src="./img/repair-styles-1.jpg" alt="styles" class="repair-styles__image"></div>
+                                    <div class="repair-styles__image-wrapper"><img src="./img/repair-styles-2.jpg" alt="styles" class="repair-styles__image"></div>
+                                    <div class="repair-styles__image-wrapper"><img src="./img/repair-styles-3.jpg" alt="styles" class="repair-styles__image"></div>
+                                    <div class="repair-styles__image-wrapper"><img src="./img/repair-styles-4.jpg" alt="styles" class="repair-styles__image"></div>
+                                </div>
+                                <div class="swiper-slide">
+                                    <div class="repair-styles__image-wrapper"><img src="./img/repair-styles-1.jpg" alt="styles" class="repair-styles__image"></div>
+                                    <div class="repair-styles__image-wrapper"><img src="./img/repair-styles-2.jpg" alt="styles" class="repair-styles__image"></div>
+                                    <div class="repair-styles__image-wrapper"><img src="./img/repair-styles-3.jpg" alt="styles" class="repair-styles__image"></div>
+                                    <div class="repair-styles__image-wrapper"><img src="./img/repair-styles-4.jpg" alt="styles" class="repair-styles__image"></div>
+                                </div>
+                            </div>
+                            <!-- /.swiper-wrapper -->
+                        </div>
+                        <!-- /.repair-styles__images -->
+                    </div>
+                    <!-- /.row -->
+                </div>
+                <!-- /.swiper repair-styles__swiper -->
             </div>
             <!-- /.container -->
         </section>
