feat: add link on footer menu

--- a/src/index.html
+++ b/src/index.html
@@ -974,12 +974,12 @@
                     <div class="menu">
                         <div class="logo menu__logo">Repair Design Project</div>
                         <nav class="nav menu__nav">
-                            <a href="#" class="nav__link">Главная</a>
-                            <a href="#" class="nav__link">ПРоекты</a>
-                            <a href="#" class="nav__link">Замер</a>
-                            <a href="#" class="nav__link">Команда</a>
-                            <a href="#" class="nav__link">Отзывы</a>
-                            <a href="#" class="nav__link">Контакты</a>
+                          <a href="#" class="nav__link">Главная</a>
+                          <a href="#projects" class="nav__link">ПРоекты</a>
+                          <a href="#control" class="nav__link">Замер</a>
+                          <a href="#command" class="nav__link">Команда</a>
+                          <a href="#clients" class="nav__link">Отзывы</a>
+                          <a href="#footer" class="nav__link">Контакты</a>
                         </nav>
                         <div class="contacts menu__contacts">
                             <a href="tel:+79997683299" class="phone contacts__phone">+7 (999) 768-32-99</a>
